# formation_control

./: CMakeLists.txt  package.xml  package.xml~
config/: config.yaml  config.yaml~  config_current.yaml  config_line_form.yaml  config_one.yaml  config_one.yaml~
include/: FormationControl.h
launch/: EXAMPLE.bash  Scenarios.bash  cyclic.bash  formation_control_pladypos.launch  formation_cres.launch  formation_krk.launch  formation_losinj.launch  formation_mljet.launch  formation_pladypos.launch  formation_topside.launch  formation_vis.launch  one_vehicle.launch  one_velcon_enable.bash  pladypos_two_virtual.launch  plan.bash  scenarios_jarun.bash  simulation_3veh.launch  source_jarun.bash  three_vehicles.launch  three_vehicles_ekf_current.launch  three_vehicles_no_sim.launch  three_vehicles_plus_neptus.launch  topside_one_vehicle.launch  topside_three_vehicles.launch  topside_three_vehicles_ekf_current.launch  topside_three_vehicles_no_sim.launch  topside_three_vehicles_plus_neptus.launch  topside_two_vehicles_plus_pladypos.launch  velcon_enable.bash
launch/launch/: topside_three_vehicles_plus_neptus.launchthree_vehicles_no_sim_plus_neptus.launch
msg/: Current.msg  FormVehObj.msg  Formation.msg  FormationCentre.msg  FormationRotation.msg  FormationShape.msg
neptus/: 55-buddy.nvcl  56-buddy2.nvcl  57-buddy3.nvcl  neptus_bridge.xml  neptus_command.xml  neptus_params.yaml
neptus/data/: formation.ncon  split_hrm.nmisz
scenes/: experiment_environment_pladypos.xml  test_environment_moje.xml
scripts/: env_formation_veh.sh  env_formation_veh_local.sh  plan.bash  start_formation_ctrl.bash  start_formation_ctrl_local.bash  start_veh_local.bash
scripts/experiments/: exp.bash  exp_3veh.bash  exp_3veh.sh  exp_4veh.bash  exp_4veh.sh  exp_5veh.bash  exp_5veh.sh  exp_loc.bash
src/: CurrentAdaptiveFormation.cpp  FormationControl.cpp  current_node.cpp
srv/: FormChange.srv
